releases/v0.8.5/README.md
# 夜莺码 0.8.5

本版采用 G8C12 布局。发布目录已经按用途整理，根目录只保留本说明和发布清单。

## 从哪里开始

- `01_正式码表`：两张主表及其配套数据。日常实战微调只修改其中的单字表和字词表。
- `02_输入法挂接`：搜狗、手心可直接导入的文件；手心同时提供整合版和模块化版。
- `03_字根与拆分`：字根表、图片、PDF，以及规范拆分表。
- `04_查询与练习`：编码反查、拆分查询、部件查字、字根练习器和必拆字练习。
- `05_维护与裁决`：实战问题、机器参数、裁决表、对照导出和维护截图。
- `99_参考资料`：外部方案与历史参考，不作为夜莺正式编码来源。

## 主表关系

`01_正式码表/夜莺0.8.5字词表.txt`是字词在前的完整综合主表；同目录的`夜莺0.8.5字词表_码前.txt`内容和顺序完全相同，只交换两列。`夜莺码v0.8.5单字版.txt`是另一张主表。两张主表均含18770个单读音、仅全码的扩展字。

综合主表包含单字、普通词、全部夜莺简词，以及第一批302条高置信度多音词语境校正。实战微调不直接修改搜狗或手心派生文件。

四码位上的普通词（二字、三字全码词）自2026-09-02起以`99_参考资料/参考/简单鹤V9.3.0纯词库 (1).txt`的内容与词序为准（ADR-0003）：词码按夜莺规则从单字音码重编，不采用简单鹤飞键；单字、人工裁决过的字词和实战修改过的字词守住原候选位，一二三码位与快符不动。重排由`work/夜莺0.85/scripts/reorder_v085_words_from_jdhe.py`完成，变更摘要与逐码位明细见`05_维护与裁决/普通词序采用简单鹤_变更摘要.json`与`_变更明细.tsv`。

修改主表后，在工程根目录运行：

```powershell
python .\pipelines\v085\rebuild.py
```

脚本会更新码前镜像，并重建`02_输入法挂接`中的搜狗与手心文件。

## 各输入法版本

- 搜狗“无二字词版”写入单字、夜莺简词和扩展字，不写普通全码二字词；候选序号仍继承综合主表，为搜狗自带词库联想留位。
- 搜狗五笔原生版使用“编码在前、字词在后”的 UTF-8 格式，保留核心单字、全部词、简词和快符；为满足20万条导入上限，不收18770个扩展字。它与搜狗挂接短语版是两种不同的导入方式。
- 搜狗挂接字词版不加入简词，避免超过十万条上限。
- 手心完整挂接版和“无二字词版”都加入扩展字、简词及全部快符。
- 手心模块化版可分别勾选核心单字、普通词、简词、快符和扩展字；不要与旧整合表同时启用。

扩展字编码由当前夜莺根集、人工拆分、结构覆写和0.8.5键位生成；旧参考码表的编码列不作为来源。手心辅助码只覆盖核心单字，不包含扩展字。

## 离线工具

查询和练习页面均可直接双击打开。字根练习器与配套TXT放在同一目录；拆分查询、部件查字和编码反查的数据已经内嵌，无需联网。
